# viper

./: .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: release.yml
runtime/: viper_rt.c  viper_rt.h
src/viper/: cli.py  dep_scanner.py  embed.py  embed_module.py  freezer.py  linker.py  resolver.py  toolchain.py  types.py
src/viper/parser/: ast_nodes.py  reader.py
src/viper/typeinfer/: engine.py
tests/programs/hello/: pyproject.toml
tests/programs/hello/src/hello/: __init__.py
