[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viper-compiler"
version = "0.1.0"
description = "python to native code compiler"
requires-python = ">=3.12"

[project.scripts]
viper = "viper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/viper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
