[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "viperc"
version = "0.3.0"
description = "compile python packages to standalone binaries"
requires-python = ">=3.12"

[project.scripts]
viperc = "viper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/viper"]
